# SurajClaw

./: .gitignore  AGENTS.md  CLAUDE.md  PersonalAI_SoftwareDoc.md  README.md  SurajClaw.code-workspace  lobsterbot_srd_plan_1.docx  opencode.json  start.sh
surajclaw/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  docker-compose.yml  manage.py  mcp_server.py  pyproject.toml  requirements.txt
surajclaw/agents/: dream.py  gemini_cloudcode_chat.py  gemini_oauth.py  graph.py  invocation.py  model_router.py  orchestrator.py  registry.py  state.py  types.py
surajclaw/api/: auth.py  doctor.py  google.py  serializers.py  urls.py  views.py  viewsets.py
surajclaw/approval/: admin.py  apps.py  gate.py  models.py  urls.py  views.py
surajclaw/chat/: auth.py  commands.py  consumers.py  directives.py  routing.py  streaming.py  urls.py  views.py
surajclaw/clawcli/: AGENTS.md  __init__.py  __main__.py  chat.py  config.py  http.py  main.py  modals.py  render.py  tui.py
surajclaw/config/: asgi.py  celery.py  urls.py
surajclaw/core/: admin.py  google_accounts.py
surajclaw/custom_tools/: admin.py  apps.py  loader.py  models.py
surajclaw/feeds/: admin.py  apps.py  models.py
surajclaw/kanban/: __init__.py  admin.py  apps.py  models.py  services.py  views.py  worker.py
surajclaw/memory/: admin.py  apps.py  models.py  services.py
surajclaw/nginx/: surajclaw.conf
surajclaw/notebooks/: agent_lab.ipynb
surajclaw/pairing/: __init__.py  apps.py  models.py  services.py
surajclaw/sandbox/: base.py  docker_backend.py  policies.py
surajclaw/tools/: notes.py  (+1 more)
(+141 files in other folders)
